<!--
  ~ Copyright (c) 2021. Aditya Bavadekar
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~
  -->

<resources>
    <string name="app_name">Hiphe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_gallery_second">Hello GallerySecondFragment. Arg: %1$s</string>
    <string name="hello_slideshow_second">Hello SlideshowSecondFragment. Arg: %1$s</string>
    <string name="signin_hasmap_timestamp">EEE,dd mmm yyyy HH:mm aaa Z</string>
    <string name="mlkit_alert_thanks_closing">\n\nThanks and Regards,\nAditya Bavadekar \nSpecial Thanks: Google MLkit</string>
    <string name="alert_labeling_title">Result (from AI)</string>
    <string name="data">"\"           DETAILS\nMODEL : $model\nMANUFACTURER : $manufacturer\nUSER : $user\nID : $id\nDEVICE : $device\nBRAND : $brand\nPRODUCT : $product \nAndroid SDK Version : $androidOs\nAndroid Version : $androidOs\nAndroid Version : $androidOs\nAndroid Version : $androidOs\nAndroid Release Version : $androidVersion\nFree Space: $freeSpace\nTotal Space : $totalSpace\n\n        ***APP***\nPackage Name : $packageName\nVersion Name : $versionName\nVersion Code : $versionCode\nBuild Time : $time\nBuild Time : $time\nInstall Location : $installLoacation\nPermissions: $permissionsGranted\""\n\n</string>
    <string name="accept_sign_up"><![CDATA[Accept & Sign up]]></string>
    <string name="cancel">Cancel</string>
    <string name="disclaimer_signup">By tapping \"Accept &amp; Sign up\", you acknowledge that you have read the <a href="policies.google.com/privacy">Privacy Policy</a> and agree to the <a href="policies.google.com/terms">Terms of Service</a></string>
    <string name="crash_has_occurred">Crash has occurred</string>
    <string name="welcome_sub_note">Join over 300 million people who use Hiphe to talk with societies, communities and friends.</string>
    <string name="try_otp_authentication">Try OTP authentication</string>
    <string name="password_should_be">Password should be at least 8 characters long.</string>
    <string name="title_login">Login</string>
    <string name="excitement_to_login">We\'re too excited to see you again!</string>
    <string name="title_email_address">Email Address</string>
    <string name="title_password">Password</string>
    <string name="title_forgot_your_password">Forgot your password?</string>
    <string name="title_country_code">Code</string>
    <string name="titlephone">Phone</string>
    <string name="title_send_sms">Send SMS</string>
    <string name="___sign_up">"Sign up"</string>
    <string name="____login">"Login"</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_confirm_password">Confirm Password</string>
    <string name="title_sign_up">Sign up</string>
    <string name="title_name">Name</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="textview_email_address">"EMAIL ADDRESS : "</string>
    <string name="textview_phone">PHONE :</string>
    <string name="textview_full_name">FULL NAME :</string>
    <string name="account_info">Account Info</string>
    <string name="adityabavadekarapps">\@adityabavadekarapps</string>
    <string name="about_hiphe">About Hiphe</string>
    <string name="logout">LOGOUT</string>
    <string name="hiphe_and_ai">Hiphe and AI</string>
    <string name="are_you_sure_logout_message">This would Log you out from the app. <small>You will have to Login or SignUp again in order to use this app.</small> Are you sure you want to Logout?\nTip: if you prefer to Logout when knowing you will Login later, you can click \"Remember and Logout\" so that your credentials would be remembered and you would be asked if you want to login with this account</string>
    <string name="powered_by_hiphe">Powered by Hiphe</string>
    <string name="ok">OK</string>
    <string name="send_a_hi">Send a \"Hi\"</string>
    <string name="title_activity_hiphe_settings">HipheSettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="notifications_header">Notifications</string>
    <string name="mobile_notifications_header">Mobile Notifications</string>
    <string name="you_h_header">You and Hiphe</string>
    <string name="advanced_header">Advanced</string>
    <string name="more_header">More</string>
    <string name="theme_header">Theme</string>
    <string name="faqs_header">FAQs</string>
    <string name="crash_rprting_header">Enable Sending Crash Report Data</string>
    <string name="send_crash_rprting_header">Send Logs and data</string>
    <string name="crash_and_data_header">Crashes and data</string>
    <string name="browse_header">Browse</string>
    <string name="reporting_header">Reporting Problems</string>
    <string name="sync_header">Sync</string>

    <!-- Notifications Preferences -->
    <string name="notifications_pref_title">Notifications settings</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Theme Preferences -->
    <string name="theme_pref_title">Choose theme</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="default_version_detail_text">No information available</string>
    <string name="remember_logout">Remember and Logout</string>
    <string name="crash_report_summary">Primarily Crash reports help us diagnose problems and improve. Crash reports include data like the Model of your device, android version etc</string>
    <string name="_0ops_looks_like_you_are_offline_n_nno_worries_docs_downloaded_for_offline_use_will_always_be_there_even_in_offline_mode"><b>0ops! looks like you are offline</b>\n\nNo worries docs downloaded for offline use will always be there even in offline mode.</string>
    <string name="dashboard">Dashboard</string>
    <string name="dynamic_link_uri_prefix">https://hiphe.page.link</string>
    <string name="deeplink_url">https://hiphe.adityaamolbavadekar.com/users</string>
    <string name="title_offline_no_connection">Offline (No connection)</string>
    <string name="title_back_online">Back online</string>
    <string name="oops_something_went_wrong"><b><big>0ops! something went wrong</big></b>\n\n<i><small>THAT\'S ALL WE KNOW</small></i>\n\n\n</string>
    <string name="error_nrequested_user_was_not_found_nplease_recheck_the_url">Error! \nRequested User was not found\nPlease recheck the Link</string>
    <string name="email_address_formatted">EMAIL ADDRESS : %1$s</string>
    <string name="user_id_formatted">USER ID : %1$s</string>
    <string name="user_name_formatted">USER NAME : %1$s</string>
    <string name="created_on_formatted">CREATED ON : %1$s</string>

</resources>