<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021. Aditya Bavadekar
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/title_login"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"
                android:text="@string/excitement_to_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView3" />

            <LinearLayout
                android:id="@+id/emailPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:hint="@string/title_email_address">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/title_password"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/forgot_psw"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="0dp"
                    android:gravity="start"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:paddingHorizontal="13dp"
                    android:paddingVertical="5dp"
                    android:text="@string/title_forgot_your_password"
                    android:textAllCaps="false" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/authenticate_with_otp"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="0dp"
                    android:gravity="start"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:paddingHorizontal="13dp"
                    android:text="@string/try_otp_authentication"
                    android:textAllCaps="false" />

                <LinearLayout
                    android:id="@+id/btn_l"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:paddingBottom="30dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/cancelButton"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="10dp"
                        android:padding="10dp"
                        android:text="@string/cancel"
                        android:textAllCaps="false" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/loginBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="10dp"
                        android:paddingHorizontal="50dp"
                        android:paddingVertical="10dp"
                        android:text="@string/title_login"
                        android:textAllCaps="false" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/OTP_Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="80dp"
                            android:layout_height="match_parent"
                            android:layout_marginVertical="10dp"
                            android:hint="@string/title_country_code"
                            app:prefixText="+"
                            app:prefixTextAppearance="@style/TextAppearance.AppCompat.Title">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/ccode"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:focusedByDefault="true"
                                android:inputType="number"
                                android:maxLines="3"
                                android:nextFocusRight="@id/phone"
                                android:text="91"
                                android:textSize="20sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/phone_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:hint="@string/titlephone"
                            app:counterEnabled="true"
                            app:counterMaxLength="10"
                            app:errorEnabled="true"
                            app:helperText="You will receive an OTP.\nStandard SMS rates may apply."
                            app:prefixTextAppearance="@style/TextAppearance.AppCompat.Title">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="phone"
                                android:textSize="20sp"
                                tools:text="1234567891" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/sendSMS_Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="5dp"
                        android:paddingHorizontal="50dp"
                        android:paddingVertical="10dp"
                        android:text="@string/title_send_sms"
                        android:textAllCaps="false"
                        app:cornerRadius="10dp" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/otp_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">


                    <TextView
                        android:id="@+id/timerTxtView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-condensed-light"
                        android:gravity="center"
                        android:text="You have 60s"
                        android:visibility="invisible" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:enabled="false"
                        android:padding="2dp"
                        app:counterEnabled="true"
                        app:counterMaxLength="6"
                        app:errorEnabled="true"
                        app:prefixText="OTP : "
                        app:prefixTextAppearance="@style/TextAppearance.AppCompat.Display1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/otp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Verification code"
                            android:inputType="number"
                            android:maxLength="6"
                            android:padding="25dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                            tools:text="123456" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <!--
                                        <com.google.android.material.button.MaterialButton
                                            android:id="@+id/resendButtonOtp"
                                            style="@style/Widget.MaterialComponents.Button.TextButton"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="start"
                                            android:text="Resend"
                                            android:textAllCaps="false" />-->


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/otp_btn_l"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/authenticate_with_password"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:text="Cancel OTP \nverification and \nTry Username authentication"
                        android:textAllCaps="false" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/verifyOTP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="10dp"
                        android:enabled="false"
                        android:paddingHorizontal="30dp"
                        android:paddingVertical="10dp"
                        android:text="Verify OTP"
                        android:textAllCaps="false"
                        app:cornerRadius="10dp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:gravity="center"
                android:padding="10dp"
                android:text="OR"
                android:textColor="?android:textColorPrimary" />

            <include
                android:id="@+id/signin_with_google_btn2"
                layout="@layout/continue_sign_in_with_google_button"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="@string/dont_have_an_account"
                    android:textAllCaps="false" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/go_to_signup_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="start|center_vertical"
                    android:padding="5dp"
                    android:text="@string/___sign_up"
                    android:textAllCaps="false" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>